--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.17.0",
+    "dotenv": "^16.4.5",
     "langchain": "0.2.18",
     "lucide-react": "^0.454.0",
     "next": "14.2.8",
